# google-docs-mcp

./: .env.example  README.md  main.py  pyproject.toml
docs/: api_reference.md
google_docs_mcp/: __init__.py  main.py
src/: __init__.py  api_client.py  auth.py  models.py  tools.py
